# ocsf-schema-compiler

./: .gitignore  Makefile  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: diffs.md  format.md  legacy_format.md
scripts/: ensure-venv.sh
src/ocsf_schema_compiler/: __init__.py  __main__.py  compiler.py  exceptions.py  jsonish.py  legacy_mode.py  ocsf_utils.py  scoping.py  structured_read.py  utils.py
tests/: __init__.py  diff.py  test_bad_regressions.py  test_dictionary_type_regressions.py  test_expected_changes.py  test_jsonish.py  test_regressions.py  test_shadow_regressions.py
tests/compiled-baselines/: README.md  browser-schema-v1.6.0-aws-v1.0.0.json.zst  browser-schema-v1.6.0.json.zst  browser-schema-v1.6.0.zst  schema-v1.0.0-rc.2-splunk-v1.16.2.json  schema-v1.0.0-rc.2-splunk-v1.16.2.json.zst  schema-v1.0.0-rc.2.json.zst  schema-v1.6.0-aws-v1.0.0.json.zst  schema-v1.6.0-example-extensions-shadow.json.zst  schema-v1.6.0-example-extensions.json.zst  schema-v1.6.0-example-v1.0.0.json.zst  schema-v1.6.0.json.zst  server-v3-schema-v1.6.0-aws-v1.0.0.json.zst
tests/uncompiled-schemas/: README.md
tests/uncompiled-schemas/aws-v1.0.0/: README.md  dictionary.json  extension.json
tests/uncompiled-schemas/aws-v1.0.0/objects/: attachment.json  certificate.json  cloud_function.json  database.json  database_cluster.json  device.json  endpoint.json  image.json  instance_profile.json  layer.json  network_interface.json  policy.json  user.json  (+6 more)
tests/uncompiled-schemas/bad-extension-scoped-category/: categories.json
tests/uncompiled-schemas/bad-extension-scoped-dictionary-attribute/: dictionary.json  extension.json
tests/uncompiled-schemas/bad-extension-scoped-dictionary-type/: dictionary.json
tests/uncompiled-schemas/example-extension/: extension.json
tests/uncompiled-schemas/extension-colliding-dictionary-type/: dictionary.json
tests/uncompiled-schemas/extension-shadow-category/: categories.json
tests/uncompiled-schemas/extension-shadow-dictionary-attribute/: dictionary.json
tests/uncompiled-schemas/ocsf-schema-v1.0.0-rc.2/: README.md
tests/uncompiled-schemas/ocsf-schema-v1.6.0/: README.md
tests/uncompiled-schemas/splunk-v1.16.2/: README.md
(+49 files in other folders)
